add cloth class and forces class and render cloth made of particles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <div id="container"></div>
 <script src="js/three.js"></script>
 <script src="js/OrbitControls.js"></script>
+<script src="js/Cloth.js"></script>
+<script src="js/Forces.js"></script>
 <script src="js/Particle.js"></script>
-<script src="js/simulation.js"></script>
+<script src="js/Simulation.js"></script>
 
 
-</script>
+
 </body>
 </html>
