fix some stupid mistakes with the connection between vertices

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div id="container"></div>
 <script src="js/three.js"></script>
 <script src="js/OrbitControls.js"></script>
+<script src="js/Variables.js"></script>
 <script src="js/Cloth.js"></script>
 <script src="js/Forces.js"></script>
 <script src="js/Particle.js"></script>
