texture and  wind

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 <div id="container"></div>
 <script src="js/three.js"></script>
-<script src="js/OrbitControls.js"></script>
+<script src="js/perlin.js"></script>
+<script src="js/Utils.js"></script>
 <script src="js/Variables.js"></script>
+<script src="js/OrbitControls.js"></script>
 <script src="js/Cloth.js"></script>
 <script src="js/Forces.js"></script>
 <script src="js/Particle.js"></script>
