elongation fix, collision response with a sphere

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="js/Utils.js"></script>
 <script src="js/Variables.js"></script>
 <script src="js/OrbitControls.js"></script>
+<script src="js/Spring.js"></script>
 <script src="js/Cloth.js"></script>
 <script src="js/Forces.js"></script>
 <script src="js/Particle.js"></script>
